# autd3-capi-emulator

./: Cargo.toml  Makefile.toml  ThirdPartyNotice.txt  build.py
.github/workflows/: build.yml  release.yml
src/: drive.rs  instant.rs  lib.rs  output.rs  ptr.rs  range.rs  result.rs  rms.rs
tools/license-checker/: Cargo.toml  license-file.toml
tools/license-checker/src/: main.rs
